--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ add_service_files(
 add_action_files(
   FILES
   Explore.action
+  MoveEight.action
 )
 
 # Generate added messages and services with any dependencies listed here
