--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,8 +43,9 @@ add_service_files(
 # Generate actions in the 'action' folder
 add_action_files(
   FILES
-  Explore.action
   MoveEight.action
+  Explore.action
+  Beaconing.action
 )
 
 # Generate added messages and services with any dependencies listed here
