basic version of task5 relies on randomness and luck, need to test on real robots

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ add_message_files(
 add_service_files(
   FILES
   GetTargetColour.srv
+  CaptureImage.srv
 )
 
 # Generate actions in the 'action' folder
